force-app/main/default/objects/Adder_Extension__c/Adder_Extension__c.object-meta.xml
<CustomObject>
    <description>Used with Incentives</description>
    <label>Adder or Extension</label>
    <nameField>
        <displayFormat>AE-{0}</displayFormat>
        <label>AddExt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adders &amp; Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>