force-app/main/default/objects/Adder_Extension__c/fields/Adder_Type__c.field-meta.xml
<CustomField>
    <fullName>Adder_Type__c</fullName>
    <label>Adder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Brownfield</fullName>
            </value>
            <value>
                <fullName>Building Mounted</fullName>
            </value>
            <value>
                <fullName>Canopy</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Landfill</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>LMI CS</fullName>
            </value>
            <value>
                <fullName>LMI Property</fullName>
            </value>
            <value>
                <fullName>Public Entity</fullName>
            </value>
            <value>
                <fullName>Energy Storage</fullName>
            </value>
            <value>
                <fullName>Solar Tracking</fullName>
            </value>
            <value>
                <fullName>Pollinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>