force-app/main/default/objects/Adder_Extension__c/fields/Base_Compensation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Compensation_Rate__c</fullName>
    <label>Base Compensation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>