force-app/main/default/objects/Adder_Extension__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <inlineHelpText>Enter the block number (1-20)</inlineHelpText>
    <label>Block</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>