force-app/main/default/objects/Adder_Extension__c/fields/Extension_Expires__c.field-meta.xml
<CustomField>
    <fullName>Extension_Expires__c</fullName>
    <label>Extension Expires</label>
    <type>Date</type>
</CustomField>