force-app/main/default/objects/Adder_Extension__c/fields/Extension_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee_Paid__c</fullName>
    <label>Extension Fee Paid</label>
    <type>Date</type>
</CustomField>