force-app/main/default/objects/Adder_Extension__c/fields/Extension_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Extension_Request_Approved__c</fullName>
    <label>Extension Request Approved</label>
    <type>Date</type>
</CustomField>