force-app/main/default/objects/Adder_Extension__c/fields/Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>Extension_Requested__c</fullName>
    <label>Extension Requested</label>
    <type>Date</type>
</CustomField>