force-app/main/default/objects/Adder_Extension__c/fields/Extension_Type__c.field-meta.xml
<CustomField>
    <fullName>Extension_Type__c</fullName>
    <label>Extension Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>Fee-Based</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>