force-app/main/default/objects/Adder_Extension__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipLabel>Adders &amp; Extensions</relationshipLabel>
    <relationshipName>Adders_Extensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>