force-app/main/default/objects/Adder_Extension__c/fields/Reservation_Expires__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Expires__c</fullName>
    <label>Reservation Expires</label>
    <type>Date</type>
</CustomField>