force-app/main/default/objects/Adder_Extension__c/fields/Tranche__c.field-meta.xml
<CustomField>
    <fullName>Tranche__c</fullName>
    <inlineHelpText>Enter1-20</inlineHelpText>
    <label>Tranche</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>