force-app/main/default/objects/Adder_Extension__c/recordTypes/Reservation_Extension.recordType-meta.xml
<RecordType>
    <fullName>Reservation_Extension</fullName>
    <active>true</active>
    <label>Reservation Extension</label>
</RecordType>