force-app/main/default/objects/Adder_Extension__c/recordTypes/SMART.recordType-meta.xml
<RecordType>
    <fullName>SMART</fullName>
    <active>true</active>
    <label>SMART</label>
</RecordType>