force-app/main/default/objects/Adder_Extension__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Adder_Type__c</columns>
    <columns>Incentive__c</columns>
    <columns>Block__c</columns>
    <columns>Extension_Expires__c</columns>
    <columns>Extension_Fee_Paid__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>